--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dotnet-project-version-updater",
   "version": "1.0.0",
-  "description": "A GitHub action to update or bump project versions in .csproj, .cs, .prop, and .nuspec files",
+  "description": "A GitHub action to update or bump project versions in .csproj, .cs, .props, and .nuspec files",
   "main": "lib/index.js",
   "scripts": {
     "build": "tsc",
