--- a/test-files/expected-results/Test.props
+++ b/test-files/expected-results/Test.props
@@ -1,5 +1,6 @@
 <Project>
     <PropertyGroup>
         <Version>4.5.6</Version>
+        <VersionPrefix>4.5.6</VersionPrefix>
     </PropertyGroup>
 </Project>
