--- a/test-files/input/Test.props
+++ b/test-files/input/Test.props
@@ -1,5 +1,6 @@
 <Project>
     <PropertyGroup>
         <Version>1.2.3</Version>
+        <VersionPrefix>1.2.3</VersionPrefix>
     </PropertyGroup>
 </Project>
