--- a/test-files/input/Test.fsproj
+++ b/test-files/input/Test.fsproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <Version>1.2.3</Version>
+        <VersionPrefix>1.2.3</VersionPrefix>
         <AssemblyVersion>1.2.3</AssemblyVersion>
         <FileVersion>1.2.3</FileVersion>
     </PropertyGroup>
