--- a/test-files/all-files-test/expected-results/Test.props
+++ b/test-files/all-files-test/expected-results/Test.props
@@ -2,5 +2,7 @@
     <PropertyGroup>
         <Version>4.5.6</Version>
         <VersionPrefix>4.5.6</VersionPrefix>
+        <AssemblyVersion>4.5.6</AssemblyVersion>
+        <FileVersion>4.5.6</FileVersion>
     </PropertyGroup>
 </Project>
