--- a/test-files/tag-filter-test/expected-results/Test.csproj
+++ b/test-files/tag-filter-test/expected-results/Test.csproj
@@ -4,5 +4,6 @@
         <VersionPrefix>1.2.3</VersionPrefix>
         <AssemblyVersion>4.5.6</AssemblyVersion>
         <FileVersion>1.2.3</FileVersion>
+        <InformationalVersion>1.2.3</InformationalVersion>
     </PropertyGroup>
 </Project>
