--- a/test-files/all-files-test/expected-results/Test.props
+++ b/test-files/all-files-test/expected-results/Test.props
@@ -4,5 +4,6 @@
         <VersionPrefix>4.5.6</VersionPrefix>
         <AssemblyVersion>4.5.6</AssemblyVersion>
         <FileVersion>4.5.6</FileVersion>
+        <InformationalVersion>4.5.6</InformationalVersion>
     </PropertyGroup>
 </Project>
