--- a/test-files/no-matching-files-test/input/Test.csproj
+++ b/test-files/no-matching-files-test/input/Test.csproj
@@ -4,5 +4,6 @@
         <VersionPrefix>1.2.3</VersionPrefix>
         <AssemblyVersion>1.2.3</AssemblyVersion>
         <FileVersion>1.2.3</FileVersion>
+        <InformationalVersion>1.2.3</InformationalVersion>
     </PropertyGroup>
 </Project>
