--- a/test-files/single-file-test/input/Test.csproj
+++ b/test-files/single-file-test/input/Test.csproj
@@ -4,5 +4,6 @@
         <VersionPrefix>4.5.6</VersionPrefix>
         <AssemblyVersion>4.5.6</AssemblyVersion>
         <FileVersion>4.5.6</FileVersion>
+        <InformationalVersion>4.5.6</InformationalVersion>
     </PropertyGroup>
 </Project>
